Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31939

Cannot specify qmake for Docker under Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 15.0.0-rc1
    • Qt Creator 14.0.2
    • Docker
    • None
    • Windows
    • d5d4e2da8 (15.0)

      I am trying to move my docker image from the public facing one from docker.io to a private one that I can share. I have most of the settings transitioned over to my private Container, however, this setting cannot be changed on Windows, because when I navigate to the qmake directory, it only allows me to choose a qmake.exe or qmake.bat file, and not a qmake file (with no extension).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ansemkiv Andrii Semkiv
            brgusso Brian Gusso
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes