Utils: Accommodate cross-platform qmake setups

File picker dialog filter was based exclusively on the host system.
This created problems in some remote scenarios, for example,
on Windows host it was impossible to select Linux target qmake.

Fixes: QTCREATORBUG-31939
Change-Id: I6a6716a4ce198cd5732f39525baf4b8ded11f376
Reviewed-by: hjk <hjk@qt.io>